# control23

./: .gitignore  Figuras finales.ipynb  figs_aug24(sensitivity).ipynb  figs_dec23.ipynb  figs_feb24.ipynb  figuras presentacion.ipynb  links_map.ipynb  notebook.ipynb  plots_links.ipynb  trajectories.ipynb  transport.ipynb
confinement/: MC_Dist.cpp  MC_Dist.hpp  MC_DistDiaNocheF  MobMatrix.hpp  ThreadPool.hpp  config.hpp  main  main.cpp  nohup.out
curves_confinement/: Sparse.hpp  benchmark.hpp  config.hpp  main.cpp
curves_times/: CMakeLists.txt  Log.hpp  MC_Dist.hpp  benchmark.hpp  main.cpp
curves_times_reduction_R0/: Sparse.hpp  main  main.cpp
map_impact_confinement/: CMakeLists.txt  MC_Dist.hpp  MC_DistDiaNocheF.cpp  main.cpp
map_impact_confinement/cities3/baltimore/: Poparea.txt  mobnetwork.txt
map_impact_confinement/cities3/dallas/: Citypatch.txt  Poparea.txt
map_impact_confinement/cities3/detroit/: Poparea.txt
map_impact_confinement/eigenvectors3/: miami_10.txt
public_transport/times/: CMakeLists.txt  Log.hpp  Sparse.hpp  betweenness_centrality.py  centrality.ipynb  eigen_centrality.py  main  main.cpp  networks.cpp  networks.hpp
public_transport/times/bogota/: weights.txt
public_transport/times/cities3/los angeles/: Citypatch.txt
public_transport/times/eigenvectors3/: austin_10.txt  baltimore_10.txt  dallas_09.txt  dc_10.txt  detroit_10.txt  los angeles_10.txt  ma_10.txt  miami_10.txt  seattle_10.txt
public_transport/times/main.dSYM/Contents/Resources/DWARF/: main
public_transport/times/prueba/: eigenvector.txt
tests/: CMakeLists.txt  (+4 more)
(+122 files in other folders)
